Fix scrollbar on playbacks.

--- a/perma_web/static/bundles/single-link.css
+++ b/perma_web/static/bundles/single-link.css
@@ -4447,6 +4447,10 @@ a:active {
   margin: 0 auto;
 }
 
+#main-content {
+  padding: 0;
+}
+
 #main-archive,
 #main-content,
 #main-content > .row,
